--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      width: 8px; /* Largura da barra de rolagem */
+    }
+    .scrollbar::-webkit-scrollbar-track {
+      background: #f1f1f1; 
+    }
+    .scrollbar::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 8px;
+    }
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #555; 
+    }
+  }
+  
